--- a/app/src/main/res/layout/activity_subgeddit.xml
+++ b/app/src/main/res/layout/activity_subgeddit.xml
@@ -3,12 +3,7 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".Geddit_main">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context="ch.epfl.fbhack.geddit.subgeddit">
 
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/listView_main_subgeddit"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true" />
 </RelativeLayout>
