--- a/app/src/main/res/menu/menu_geddit_main.xml
+++ b/app/src/main/res/menu/menu_geddit_main.xml
@@ -3,4 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools" tools:context=".Geddit_main">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
+
+    <item android:id="@+id/action_refresh" android:title="@string/action_refresh"
+        android:orderInCategory="100" app:showAsAction="ifRoom" />
+
+    <item android:id="@+id/action_map" android:title="@string/action_map"
+        android:orderInCategory="100" app:showAsAction="ifRoom"/>
 </menu>
