--- a/app/src/main/res/layout/activity_activity_map.xml
+++ b/app/src/main/res/layout/activity_activity_map.xml
@@ -1,4 +1,4 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="ch.epfl.fbhack.geddit.activity_map"
     android:orientation="vertical"
@@ -16,4 +16,4 @@
         tilesource="Mapnik"
         />
 
-</RelativeLayout>
+</LinearLayout>
