--- a/app/src/main/res/layout/activity_activity_map.xml
+++ b/app/src/main/res/layout/activity_activity_map.xml
@@ -6,8 +6,7 @@
     android:layout_height="fill_parent">
 
     <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
+        android:layout_height="wrap_content" android:id="@+id/myLocationText" />
 
     <org.osmdroid.views.MapView
         android:id="@+id/mapview"
