--- a/app/src/main/res/menu/menu_activity_map.xml
+++ b/app/src/main/res/menu/menu_activity_map.xml
@@ -4,4 +4,10 @@
     tools:context="ch.epfl.fbhack.geddit.activity_map">
     <item android:id="@+id/action_settings" android:title="@string/action_settings"
         android:orderInCategory="100" app:showAsAction="never" />
+
+    <item android:id="@+id/action_refresh" android:title="@string/action_refresh"
+        android:orderInCategory="100" app:showAsAction="ifRoom" />
+
+    <item android:id="@+id/action_list" android:title="@string/action_list"
+        android:orderInCategory="100" app:showAsAction="ifRoom" />
 </menu>
