--- a/app/src/main/res/layout/activity_subgeddit.xml
+++ b/app/src/main/res/layout/activity_subgeddit.xml
@@ -6,4 +6,10 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="ch.epfl.fbhack.geddit.subgeddit">
 
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/threads_list"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
 </RelativeLayout>
