--- a/app/src/main/res/layout/thread_item.xml
+++ b/app/src/main/res/layout/thread_item.xml
@@ -26,7 +26,8 @@
         android:layout_width="40dp"
         android:layout_height="wrap_content"
         android:text="+"
-        android:id="@+id/upvote" />
+        android:id="@+id/upvote"
+        />
 
     <Button
         android:layout_width="40dp"
@@ -34,5 +35,6 @@
         android:text="-"
         android:id="@+id/downvote"
         android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/textView2"/>
+        android:layout_toEndOf="@+id/textView2"
+        />
 </LinearLayout>
