--- a/app/src/main/res/layout/thread_item.xml
+++ b/app/src/main/res/layout/thread_item.xml
@@ -2,39 +2,33 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:paddingLeft="16dp"
+    android:paddingRight="16dp"
     android:paddingTop="16dp"
     android:textSize="15dp">
 
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="Title"
         android:id="@+id/title"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
         android:layout_weight="1" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Score"
-        android:id="@+id/score"
-        android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/title" />
+        android:text="@string/score"
+        android:id="@+id/score" />
 
     <Button
         android:layout_width="40dp"
         android:layout_height="wrap_content"
-        android:text="+"
+        android:text="@string/plusSign"
         android:id="@+id/upvote"
         />
 
     <Button
         android:layout_width="40dp"
         android:layout_height="wrap_content"
-        android:text="-"
-        android:id="@+id/downvote"
-        android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/textView2"
-        />
+        android:text="@string/minusSign"
+        android:id="@+id/downvote" />
 </LinearLayout>
