--- a/app/src/main/res/layout/activity_comments.xml
+++ b/app/src/main/res/layout/activity_comments.xml
@@ -8,7 +8,7 @@
         android:paddingTop="20dp"
         android:paddingLeft="30dp"
         android:paddingRight="30dp"
-        android:textSize="30px"
+        android:textSize="30dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Title"
@@ -20,7 +20,7 @@
         android:paddingLeft="30dp"
         android:paddingRight="30dp"
         android:paddingBottom="30dp"
-        android:textSize="27px"
+        android:textSize="27dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="ecwe we fwefefermlgk  k  kr k rk   lwekw;w kk ;f jk kr ewj kq kjedk w kek kefk ekf jwej  j kfej kjw; jkejf kjkfej wekjfk jdjfk df;wjdkf jw;ef kwe;f kjw"
