--- a/app/src/main/res/layout/comment_item.xml
+++ b/app/src/main/res/layout/comment_item.xml
@@ -2,8 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:paddingLeft="16dp"
+    android:paddingRight="16dp"
     android:paddingTop="16dp"
-    android:textSize="15dp">
+    android:textSize="15sp">
 
     <TextView
         android:layout_width="match_parent"
