--- a/app/src/main/res/layout/thread_item.xml
+++ b/app/src/main/res/layout/thread_item.xml
@@ -4,7 +4,7 @@
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:paddingTop="16dp"
-    android:textSize="15dp">
+    android:textSize="15sp">
 
     <TextView
         android:layout_width="0dp"
